<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fondo_juego">

        <LinearLayout
            android:id="@+id/dashboard"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp">

            <TextView
                android:id="@+id/puntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/score"
                android:textSize="25sp"
                android:layout_marginEnd="30sp"/>

            <TextView
                android:id="@+id/vidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lifes"
                android:textSize="25sp"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/iBtn00"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="0"/>
                <ImageButton
                    android:id="@+id/iBtn01"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="1"/>
                <ImageButton
                    android:id="@+id/iBtn02"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="2"/>
                <ImageButton
                    android:id="@+id/iBtn03"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="3"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/iBtn10"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="0"/>
                <ImageButton
                    android:id="@+id/iBtn11"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="1"/>
                <ImageButton
                    android:id="@+id/iBtn12"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="2"/>
                <ImageButton
                    android:id="@+id/iBtn13"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/iBtn20"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="0"/>
                <ImageButton
                    android:id="@+id/iBtn21"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="1"/>
                <ImageButton
                    android:id="@+id/iBtn22"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="2"/>
                <ImageButton
                    android:id="@+id/iBtn23"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/iBtn30"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="0"/>
                <ImageButton
                    android:id="@+id/iBtn31"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="1"/>
                <ImageButton
                    android:id="@+id/iBtn32"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="2"/>
                <ImageButton
                    android:id="@+id/iBtn33"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_column="3"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/btnsControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/reiniciar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/reiniciar"
                android:src="@drawable/restart"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/salir"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/salir"
                android:src="@drawable/exit"
                android:scaleType="fitCenter"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>